@@ -1,3 +1,7 @@
+2007-05-19  Marcus Brinkmann  <marcus@g10code.de>
+
+	* manual/Makefile.am: Replace := by =.
+
 2007-05-16  Werner Koch  <wk@g10code.com>
 
 	* manual/Makefile.am: Commented advanced manual.
