@@ -1,5 +1,8 @@
 2007-05-19  Marcus Brinkmann  <marcus@g10code.de>
 
+	* autogen.sh: Fix test.
+	* src/Makefile.am: Replace := by =.a 
+
 	* packages/download.sh: Require bash due to brace expansion.
 
 2007-05-17  Werner Koch  <wk@g10code.com>
